--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="bucket img1-t5 center">코딩 배우기</div>
         <div class="bucket img2-t2 center">1종 대형 면허따기</div>
         <div class="bucket img2-t4 center">물류 공부하기</div>
-        <div class="bucket img1-t2 center done">영어공부 매일하기</div>
+        <div class="bucket img1-t2 center">영어공부 매일하기</div>
         <div class="bucket img2-t3 center">주 4회 운동하기</div>
         <div class="bucket img1-t4 center">운동 꾸준히 하기</div>
     </div>
