--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         }
 
         .title {
-            color: white;
-            background-color: tomato;
+            color: purple;
+            background-color: pink;
             font-size: 24px;
             padding: 4px 14px;
             border-radius: 8px;
